Fix docs mobile navbar not showing
There was previously no implementation for to showing/hiding the
navbar on the docs, add ome JS and CSS animations to
emulate that of the sroabo/website repo.

--- a/_sass/navigation.scss
+++ b/_sass/navigation.scss
@@ -102,7 +102,17 @@
 }
 
 .full-navigation {
-  @extend .desktop-only;
+  &.mobile-collapsed {
+    @extend .desktop-only;
+  }
+  &:not(.mobile-collapsed) {
+    animation: fadein 0.5s;
+  }
+}
+
+@keyframes fadein {
+    from { opacity: 0; }
+    to   { opacity: 1; }
 }
 
 .mobile-navigation {
